--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,4 @@
 <footer>
-<a href="/about.html">About</a>
-<br>
-<smaller>
-&copy;2015 <a href="http://glencampbell.co">Glen Campbell</a>.
+&copy;2015.
 All rights reserved.
-</smaller>
 </footer>
