--- a/static/galliard.css
+++ b/static/galliard.css
@@ -25,6 +25,7 @@ header {
 font-size: 14pt;
 margin: 1em 0 1em 0;
 border-bottom: 1px gray dotted;
+text-align: right;
 }
 header a, header a:visited {
 color: gray;
@@ -35,20 +36,19 @@ color: black;
 text-decoration: none;
 }
 footer {
-margin-top: 1em;
 line-height: 140%;
 font-size: 10pt;
-}
-footer smaller {
+margin: 3em 0 2em 0;
+color: #ddd;
 font-style: italic;
 }
 h1 {
 font-weight: normal;
+font-size: 36pt;
 }
-date {
-font-style: italic;
-font-size: smaller;
-display: block;
+h2, h3, h4, h5, h6 {
+margin-top: 2em;
+margin-bottom: 1em;
 }
 article {
 width: 36em;
@@ -61,4 +61,18 @@ margin: 1em 0 1em 0;
 article blockquote {
 font-style: italic;
 margin: 1em 3em 1em 3em;
+}
+
+ol#index {
+list-style-type: none;
+font-style: italic;
+padding: 0;
+margin: 0;
+font-size: 15pt;
+line-height: 160%;
+}
+p#info {
+font-style: italic;
+margin-top: 2em;
+font-size: smaller;
 }
