updated indices etc.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -17,6 +17,8 @@
 </article>
 
 <p id="info">
+<author>{{ .Params.author }}</author>
+<br>
 <date>{{ .Date.Format "January 2, 2006" }}</date>
 </p>
 
