--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,7 +10,7 @@
 <body lang="en">
 {{ partial "header.html" . }}
 
-<h1>{{ .Title }}</h1>
+<h1>{{ .Title | safeHTML }}</h1>
 
 <article>
 {{ .Content }}
