--- a/static/galliard.css
+++ b/static/galliard.css
@@ -2,9 +2,7 @@ body {
 font-family:'ITC Galliard W01 Roman';
 background: white;
 color: black;
-width: 44em;
-max-width: 80%;
-min-width: 44em;
+width: 42em;
 font-size: 13pt;
 margin: auto;
 }
@@ -28,7 +26,6 @@ header {
 font-size: 14pt;
 margin: 1em 0 1em 0;
 border-bottom: 1px gray dotted;
-text-align: right;
 }
 header a, header a:visited {
 color: gray;
@@ -43,7 +40,6 @@ line-height: 140%;
 font-size: 10pt;
 margin: 3em 0 2em 0;
 color: #ddd;
-font-style: italic;
 }
 h1 {
 font-weight: normal;
@@ -52,9 +48,9 @@ font-size: 36pt;
 h2, h3, h4, h5, h6 {
 margin-top: 2em;
 margin-bottom: 1em;
+border-bottom: 1px gray dotted;
 }
 article {
-width: 36em;
 line-height: 23pt;
 margin: 2em 0 2em 0;
 }
@@ -65,6 +61,12 @@ article blockquote {
 font-style: italic;
 margin: 1em 3em 1em 3em;
 }
+sup, sub {
+vertical-align: baseline;
+position: relative;
+top: -0.4em;
+}
+sub { top: 0.4em; }
 
 ol#index {
 list-style-type: none;
