--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,7 @@
 <header>
 <a href="/">{{ .Site.Title }}</a>
+<span class="right-menu">
+ <a href="/post.html">Posts</a>
+ <a href="/author.html">Authors</a>
+</span>
 </header>
