--- a/layouts/_default/item.html
+++ b/layouts/_default/item.html
@@ -1,1 +1,1 @@
-<li><a href="{{ .Permalink }}" title="{{ if eq .Section "blog" }}Blog post: {{ end }}{{ .Date.Format "January 2, 2006" }}">{{ .Title | safeHTML }}</a></li>
+<li><a href="{{ .Permalink }}" title="{{ if eq .Section "blog" }}Posted on {{ end }}{{ .Date.Format "January 2, 2006" }}">{{ .Title | safeHTML }}</a></li>
