--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,5 +2,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="{{ .Site.Params.Description }}">
+{{ .Hugo.Generator }}
 {{ if (isset .Params "author") }}<meta name="author" content="{{ .Params.author }}">{{ end }}
 {{ if (isset .Params "tags") }}<meta name="keywords" content="{{ delimit .Params.tags "," }}">{{ end }}
