--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,12 +14,15 @@ border-bottom: 1px black solid;
 <h1>{{ .Site.Title }}</h1>
 
 <ol id="index">
+<!-- posts -->
 {{ range where .Data.Pages "Section" "post" }}
   {{ .Render "item"}}
 {{ end }}
+<!-- authors -->
 {{ range where .Data.Pages.ByTitle "Section" "author" }}
   {{ .Render "item"}}
 {{ end }}
+<!-- site -->
 {{ range where .Data.Pages.ByTitle "Section" "" }}
   {{ .Render "item"}}
 {{ end }}
