tweaks to navitation menu

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header>
-<a href="/">{{ .Site.Title }}</a>
+<a href="/" title="Return to the home page">{{ .Site.Title }}</a>
 <span class="right-menu">
- <a href="/post.html">Posts</a>
- <a href="/author.html">Authors</a>
+ <a href="/post.html" title="View all posts">Posts</a>
+ <a href="/author.html" title="View all authors">Authors</a>
 </span>
 </header>
