--- a/static/galliard.css
+++ b/static/galliard.css
@@ -25,7 +25,7 @@ text-decoration: underline;
 }
 
 header {
-font-size: 14pt;
+font-size: 16pt;
 line-height: 18pt;
 margin: 1em 0 1em 0;
 border-bottom: 1px gray dotted;
@@ -94,7 +94,8 @@ line-height: 120%;
 }
 .right-menu {
 float: right;
-font-size: 10pt;
+font-size: 8pt;
+text-transform: uppercase;
 }
 .right-menu a {
 padding-left: 4pt;
