updated main page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,6 +18,8 @@ border-bottom: 1px black solid;
 {{ range where .Data.Pages "Section" "essay" }}
   {{ .Render "item"}}
 {{ end }}
+<li><a href="/k6gec.html" title="Ham radio posts">Ham Radio</a></li>
+<li><a href="/podcast.html" title="My podcast">On Garner Road</a></li>
 <!-- authors -->
 {{ range where .Data.Pages.ByTitle "Section" "author" }}
   {{ .Render "item"}}
