--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,9 @@
 <footer>
 &copy;2015.
 All rights reserved.
+<span class="right-menu">
+<a href="/tos.html">Terms of Service</a>
+<a href="/about.html">About</a>
 </footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
