--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
-&copy;2015.
+&copy;2015 Glen Campbell.
 All rights reserved.
 <span class="right-menu">
 <a href="/tos.html">Terms of Service</a>
