--- a/static/galliard.css
+++ b/static/galliard.css
@@ -20,7 +20,11 @@ a:visited {
 color: #555;
 }
 a:hover {
+color: black;
 text-decoration: underline;
+}
+a:active {
+color: red;
 }
 hr {
 border: 0; 
@@ -32,7 +36,6 @@ header {
 font-size: 16pt;
 line-height: 18pt;
 margin: 1em 0 0 0;
-#border-bottom: 1px gray dotted;
 }
 header a, header a:visited, footer a, footer a:visited {
 color: #555;
@@ -59,7 +62,6 @@ font-size: 36pt;
 h2, h3, h4, h5, h6 {
 margin-top: 2em;
 margin-bottom: 1em;
-border-bottom: 1px gray dotted;
 }
 article {
 line-height: 23pt;
