--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -25,7 +25,7 @@
 {{ if (ne .Section "") }}
 <p id="info">
 {{ if (isset .Params "author") }}
-<author>{{ .Params.author }}</author>
+{{ partial "author" .Params }}
 <br>
 {{ end }}
 {{ if (isset .Params "location") }}
