--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -25,7 +25,7 @@
 {{ if (ne .Section "") }}
 <p id="info">
 {{ if (isset .Params "author") }}
-{{ partial "author" .Params }}
+<author><a href="{{ index .Site.Data.authlinks .Params.author }}">{{ .Params.author }}</author>
 <br>
 {{ end }}
 {{ if (isset .Params "location") }}
