--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>{{ .Site.Title }}</title>
 {{ partial "head.html" . }}
-<link rel="alternate" href="{{ .RSSLink }}" type="application/rss+xml" title="{{ .Site.Title }}">
+<link rel="alternate" href="http://galliard.xyz/index.xml" type="application/rss+xml" title="{{ .Site.Title }}">
 <style>
 @import url('/galliard.css');
 h1 {
