added Uruguay to 404

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -16,8 +16,16 @@
 <p>The page that you are attempting to load has not been found.
 Generally, this means that you have followed a link to content 
 that is no longer available or you have entered an incorrect
-uniform resource locator (URL).
-</p>
+uniform resource locator (URL).</p>
+<p>Sometimes, the pages will hide from you, however.
+If this is the case, hold your hands up over your eyes,
+move them away quickly, and shout, 
+"Peek-a-boo!"
+If the pages fail to reappear after this, then they
+might have traveled to 
+[Uruguay](https://en.wikipedia.org/wiki/Uruguay).</p>
+<p>If you think you have ended up here by mistake, then please
+check your ticket and gate number.</p>
 </article>
 
 {{ partial "footer.html" . }}
