--- a/layouts/404.html
+++ b/layouts/404.html
@@ -23,7 +23,7 @@ move them away quickly, and shout,
 "Peek-a-boo!"
 If the pages fail to reappear after this, then they
 might have traveled to 
-[Uruguay](https://en.wikipedia.org/wiki/Uruguay).</p>
+<a href="https://en.wikipedia.org/wiki/Uruguay">Uruguay</a>.</p>
 <p>If you think you have ended up here by mistake, then please
 check your ticket and gate number.</p>
 </article>
