--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,8 +2,9 @@
 &copy;2015 Glen Campbell.
 All rights reserved.
 <span class="right-menu">
-<a href="/tos.html">Terms of Service</a>
-<a href="/about.html">About</a>
+<a href="/tags.html" title="Tags">Tags</a>
+<a href="/tos.html" title="Terms of Service">TOS</a>
+<a href="/about.html" title="About this site">About</a>
 </footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
