--- a/static/galliard.css
+++ b/static/galliard.css
@@ -106,6 +106,20 @@ font-style: italic;
 margin-top: 2em;
 font-size: smaller;
 }
+.sidebar {
+font-size: smaller;
+background: #eee;
+padding: 1em;
+margin-left: 1em;
+margin-bottom: 1em;
+line-height: 150%;
+float: right;
+}
+.sidebar ul {
+list-style-type: none;
+padding: 0;
+margin: 0;
+}
 
 .footnotes {
 font-size: smaller;
