--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,23 +10,23 @@
 <body lang="en">
 {{ partial "header.html" . }}
 
-{{ if eq .Title "K6gecs" }}
-<h1>Ham Radio</h1>
-<article>
-<p>These are a number of posts related to amateur ("ham") radio.
-Since they are probably not of general interest, I keep them in
-a separate section here. K6GEC is my FCC-issued callsign.</p>
-</article>
-{{ else if eq .Title "Podcasts" }}
-<h1>On Garner Road</h1>
-<article>
-<p>A few years ago, I operated an infrequent podcast wherein 
-I interviewed interesting and unusual people on the Internet.
-They are archived here for all to see.</p>
-</article>
-{{else}}
+{{ $h1 := .Title }}
+{{ $text := lower $h1 }}
+{{ $desc := "" }}
+
+{{ if (index $.Site.Data.reverse (lower .Title)) }}
+  {{ $item := index $.Site.Data.sections (index $.Site.Data.reverse (lower .Title)) }}
+  {{ $desc := index $item "description" }}
+  <h1>{{ index $item "title" }}</h1>
+  {{ if ne $desc "" }}
+  <article>
+  <p>{{ $desc }}</p>
+  <hr>
+  </article>
+  {{ end }}
+{{ else }}
 <h1>{{ .Title }}</h1>
-{{end}}
+{{ end }}
 
 <ol id="index">
 {{ range .Data.Pages }}
