--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,6 +24,7 @@ margin-top: 2em;
 <h2>Other Categories</h2>
 <li><a href="/k6gec.html" title="Ham radio posts">Ham Radio</a></li>
 <li><a href="/podcast.html" title="My podcast">On Garner Road</a></li>
+<li><a href="/project.html" title="Various projects">Software, Web Projects</a></li>
 <!-- authors -->
 <h2>Authors</h2>
 {{ range where .Data.Pages.ByTitle "Section" "author" }}
