--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,9 +1,14 @@
 <header>
-<a href="/" title="Return to the home page">{{ .Site.Title }}</a>
+<a href="/" title="Return to {{ .Site.Title }}'s home page">{{ .Site.Title }}</a>
 <span class="right-menu">
- <a href="/essay.html" title="View all posts and essays">Essays</a>
- <a href="/k6gec.html" title="Ham radio posts">K6GEC</a>
- <a href="/podcast.html" title="On Garner Road podcasts">Podcast</a>
+{{ range $section, $taxonomy := .Site.Sections }}
+  {{ if ne $section "" }}
+    {{ $item := index $.Site.Data.sections $section }}
+    {{ if $item }}
+    <a href="/{{$section}}.html" title="{{index $item "title"}}"{{if eq $.Section $section}} class="current-section"{{end}}>{{index $item "menu"}}</a>
+    {{ end }}
+  {{ end }}
+{{ end }}
 </span>
 <hr>
 </header>
