--- a/static/galliard.css
+++ b/static/galliard.css
@@ -38,7 +38,7 @@ line-height: 18pt;
 margin: 1em 0 0 0;
 }
 header a, header a:visited, footer a, footer a:visited {
-color: #555;
+color: #333;
 text-decoration: none;
 }
 header a:hover, footer a:hover {
@@ -131,7 +131,12 @@ font-size: 8pt;
 text-transform: uppercase;
 }
 .right-menu a {
-padding-left: 4pt;
+padding-left: 2pt;
+padding-right: 2pt;
+}
+.right-menu a.current-section {
+color: black;
+background: #eee;
 }
 
 @media print {
