--- a/static/galliard.css
+++ b/static/galliard.css
@@ -55,6 +55,9 @@ font-size: 10pt;
 padding: 3em 0 2em 0;
 color: #ddd;
 }
+footer a, footer a:visited {
+color: #bbb;
+}
 h1 {
 font-weight: normal;
 font-size: 36pt;
