--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,10 +21,10 @@ margin-top: 2em;
 {{ range where .Data.Pages "Section" "essay" }}
   {{ .Render "item"}}
 {{ end }}
-<h2>Other Categories</h2>
-<li><a href="/k6gec.html" title="Ham radio posts">Ham Radio</a></li>
-<li><a href="/podcast.html" title="My podcast">On Garner Road</a></li>
-<li><a href="/project.html" title="Various projects">Software, Web Projects</a></li>
+<h2>Other</h2>
+<li><a href="/k6gec.html" title="Ham radio posts">{{ index .Site.Data.sections "k6gec" "title" }}</a></li>
+<li><a href="/podcast.html" title="My podcast">{{ index .Site.Data.sections "podcast" "title" }}</a></li>
+<li><a href="/project.html" title="Various projects">{{ index .Site.Data.sections "project" "title" }}</a></li>
 <!-- authors -->
 <h2>Authors</h2>
 {{ range where .Data.Pages.ByTitle "Section" "author" }}
