--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -28,7 +28,7 @@
 <h1>{{ .Title }}</h1>
 {{ end }}
 
-<ol id="index">
+<ol id="index" class="list">
 {{ range .Data.Pages }}
   {{ .Render "item"}}
 {{ end }}
