--- a/static/galliard.css
+++ b/static/galliard.css
@@ -104,6 +104,11 @@ ol#tags li {
 display: inline;
 margin-right: 1em;
 }
+.list {
+-webkit-column-count: 2;
+-moz-column-count: 2;
+column-count: 2;
+}
 a:visited:before {
 content: "\2713 ";
 }
