--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -23,7 +23,7 @@
 </article>
 
 {{ if (ne .Section "") }}
-<p id="info">
+<div id="info">
 {{ if (isset .Params "author") }}
 <author><a href="{{ index .Site.Data.authlinks .Params.author }}">{{ .Params.author }}</a></author>
 <br>
@@ -33,7 +33,14 @@
 <br>
 {{ end }}
 <date>{{ .Date.Format "January 2, 2006" }}</date>
-</p>
+<br>
+<ul class="tags">
+{{ $baseurl := .Site.BaseURL }}
+{{ range .Params.tags }}
+<li><a href="{{ $baseurl }}/tags/{{ . | urlize }}.html">{{ . }}</a></li>
+{{ end }}
+</ul>
+</div>
 {{ end }}
 
 {{ if .Params.listtags }}
