added drop caps

--- a/static/galliard.css
+++ b/static/galliard.css
@@ -74,6 +74,12 @@ margin: 2em 0 2em 0;
 article p {
 margin: 1em 0 1em 0;
 }
+article > p:first-child:first-letter {
+float: left;
+font-size: 56pt;
+color: gray;
+padding-right: 3px;
+}
 article blockquote {
 font-style: italic;
 margin: 1em 3em 1em 3em;
