--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -33,12 +33,14 @@
 <br>
 {{ end }}
 <date>{{ .Date.Format "January 2, 2006" }}</date>
-<ul class="tags">
 {{ $baseurl := .Site.BaseURL }}
-{{ range .Params.tags }}
-<li><a href="{{ $baseurl }}tags/{{ . | urlize }}.html">{{ . }}</a></li>
+{{ if .Params.tags }}
+    <ul class="tags">
+    {{ range .Params.tags }}
+    <li><a href="{{ $baseurl }}tags/{{ . | urlize }}.html">{{ . }}</a></li>
+    {{ end }}
+    </ul>
 {{ end }}
-</ul>
 </div>
 {{ end }}
 
