fixed home page things

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,7 +18,7 @@ margin-bottom: 0;
 <h1>{{ .Site.Title }}</h1>
 <hr>
 
-<article>
+<article class="home">
 <p>Welcome to my website. This is where I write things that interest me.
 Hopefully, readers might occasionally find it interesting, too.
 I write mostly about things that happen in my life: personal history,
