--- a/static/galliard.css
+++ b/static/galliard.css
@@ -12,18 +12,30 @@ padding: 0 1em 0 1em;
 div#mti_wfs_colophon img {
 display: none;
 }
-a, article h2 a, article h2 a:visited {
+a {
 text-decoration: none;
 color: #039;
 }
 a:visited {
-color: #555;
+color: gray;
 }
 a:hover {
 color: black;
 text-decoration: underline;
 }
 a:active {
+color: red;
+text-decoration: none;
+}
+.home h2 a, .home h2 a:visited {
+color: black;
+text-decoration: none;
+}
+.home h2 a:hover {
+color: #039;
+text-decoration: underline;
+}
+.home h2 a:active {
 color: red;
 text-decoration: none;
 }
