--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,20 +6,14 @@
 <link rel="alternate" href="http://galliard.xyz/index.xml" type="application/rss+xml" title="{{ .Site.Title }}">
 <style>
 @import url('/galliard.css');
-h1 {
-font-size: 36pt;
-line-height: 24pt;
-margin-top: 2em;
-margin-bottom: 0;
-}
 </style>
 </head>
 <body lang="en">
-<h1>{{ .Site.Title }}</h1>
-<hr>
+<h1 class="home">{{ .Site.Title }}</h1>
 
 <article class="home">
-<p>Welcome to my website. This is where I write things that interest me.
+<p>Welcome to <a href="/about.html">my website</a>.
+This is where I write about things that interest me.
 Hopefully, readers might occasionally find it interesting, too.
 I write mostly about things that happen in my life: personal history,
 music, software, travel, photography, and occasional forays into politics
