--- a/layouts/404.html
+++ b/layouts/404.html
@@ -16,7 +16,7 @@
 <p>The page that you are attempting to load has not been found.
 Generally, this means that you have followed a link to content 
 that is no longer available or you have entered an incorrect
-uniform resource locator (URL).</p>
+<abbr title="Uniform Resource Locator">URL</abbr>.</p>
 <p>Sometimes, the pages will hide from you, however.
 If this is the case, hold your hands up over your eyes,
 move them away quickly, and shout, 
