--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -47,7 +47,7 @@
 {{ if .Params.listtags }}
 <ol class="tags">
 {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
-<li><a href="/tags/{{ $name | urlize }}.html">{{ $name }}</a></li>
+<li><a href="/tags/{{ $name | urlize }}.html" class="{{ if (gt $taxonomy.Count 8) }}huge{{ else if (gt $taxonomy.Count 4) }}large{{ else if (gt $taxonomy.Count 1) }}medium{{ else }}small{{ end }}" title="{{ if (eq $taxonomy.Count 1) }}1 page{{ else }}{{ $taxonomy.Count }} pages{{ end }}">{{ $name }}</a></li>
 {{ end }}
 </ol>
 {{ end }}
