--- a/static/galliard.css
+++ b/static/galliard.css
@@ -42,6 +42,7 @@ margin: auto;
 padding: 0 1em 0 1em;
 -webkit-text-size-adjust: 100%;
 }
+/*
 a {
 text-decoration: none;
 color: #039;
@@ -57,6 +58,34 @@ a:active {
 color: red;
 text-decoration: none;
 }
+*/
+
+/* Links: replicate underline that clears descenders */
+a:link, a:visited { color: inherit; }
+
+a:link { text-decoration: none;
+         background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#333, #333);
+         background: linear-gradient(#fffff8, #fffff8), linear-gradient(#fffff8, #fffff8), linear-gradient(#333, #333);
+         -webkit-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
+         -moz-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
+         background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
+         background-repeat: no-repeat, no-repeat, repeat-x;
+         text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
+         background-position: 0% 93%, 100% 93%, 0% 93%; }
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) { a:link { background-position-y: 87%, 87%, 87%; } }
+
+a:link::selection { text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
+                    background: #b4d5fe; }
+
+a:link::-moz-selection { text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
+                         background: #b4d5fe; }
+
+a:hover {
+color: #039;
+}
+
+/* Headings */
 h2, h3 {
 font-weight: normal;
 font-style: italic;
@@ -79,18 +108,6 @@ letter-spacing: -4pt;
 letter-spacing: -.3vw;
 margin-bottom: 0;
 }
-.home h2 a, .home h2 a:visited {
-color: black;
-text-decoration: none;
-}
-.home h2 a:hover {
-color: #039;
-text-decoration: underline;
-}
-.home h2 a:active {
-color: red;
-text-decoration: none;
-}
 hr {
 border: 0; 
 height: 2px; 
@@ -103,13 +120,15 @@ font-size: 16pt;
 line-height: 18pt;
 margin: 1em 0 0 0;
 }
-header a, header a:visited, footer a, footer a:visited {
+header a:link, header a:visited, footer a:link, footer a:visited {
 color: black;
 text-decoration: none;
+text-shadow: none;
+background: none;
 }
 header a:hover, footer a:hover {
 color: #039;
-text-decoration: none;
+text-decoration: underline;
 }
 header hr {
 margin-top: 0;
