--- a/static/galliard.css
+++ b/static/galliard.css
@@ -35,8 +35,8 @@
 
 body {
 font-family: ITCGalliard;
-background: white;
-color: #222;
+background: #fffff8;
+color: #111;
 max-width: 40em;
 font-size: 14pt;
 margin: auto;
