--- a/static/galliard.css
+++ b/static/galliard.css
@@ -75,7 +75,7 @@ text-decoration: underline;
 }
 a:visited {
 color: inherit;
-text-decoration: none;
+text-decoration: underline;
 }
 a:hover {
 color: #039;
@@ -246,16 +246,6 @@ line-height: auto;
 }
 .cloud li:last-child:after {
 content: ".";
-}
-.cloud a:link, .cloud a:visited {
-text-decoration: none;
-color: #039;
-padding: 1px 2px 1px 2px;
-}
-.cloud a:hover {
-color: white;
-background: #039;
-text-decoration: none;
 }
 .list {
 -webkit-column-count: 2;
